gitops-manifests/gitops-tools/argo-rollouts/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-rollouts-dashboard
    spec:
      containers:
      - image: quay.io/argoproj/kubectl-argo-rollouts:v1.8.4
        imagePullPolicy: IfNotPresent
        name: argo-rollouts-dashboard
        ports:
        - containerPort: 3100
          name: dashboard
        args:
        - dashboard
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3100
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3100
          initialDelaySeconds: 30
          periodSeconds: 20
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      serviceAccountName: argo-rollouts
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    link.argocd.argoproj.io/external-link: http://localhost:30084
spec:
  ports:
  - name: dashboard
    port: 3100
    protocol: TCP
    targetPort: 3100
    nodePort: 30084
  selector:
    app.kubernetes.io/name: argo-rollouts-dashboard
  type: NodePort
